[tool.poetry]
name = "snack_tracker"
version = "0.1.0"
description = ""
authors = ["Alex Angelico <alex.angelico@live.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.1.7"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
